--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ignite-01</module>
         <module>ignite-02</module>
+        <module>ignite-03</module>
     </modules>
 
     <properties>
